--- a/cart.css
+++ b/cart.css
@@ -1,6 +1,6 @@
 h1 {
 display: flex;
-    justify-content: centre;
+    justify-content: center;
 }
 .container {
     background-color: rgb(240, 240, 240);
